@@ -1,8 +1,8 @@
 # --
 # Kernel/Modules/AgentTicketForward.pm - to forward a message
-# Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
+# Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketForward.pm,v 1.97.2.10 2011/11/15 10:12:45 des Exp $
+# $Id: AgentTicketForward.pm,v 1.97.2.11 2012/03/05 09:48:08 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -23,7 +23,7 @@ use Kernel::System::TemplateGenerator;
 use Mail::Address;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.97.2.10 $) [1];
+$VERSION = qw($Revision: 1.97.2.11 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -189,6 +189,13 @@ sub Form {
     my %Data;
     if ( $GetParam{ArticleID} ) {
         %Data = $Self->{TicketObject}->ArticleGet( ArticleID => $GetParam{ArticleID}, );
+
+        # Check if article is from the same TicketID as we checked permissions for.
+        if ( $Data{TicketID} ne $Self->{TicketID} ) {
+            return $Self->{LayoutObject}->ErrorScreen(
+                Message => "Article does not belong to ticket $Self->{TicketID}!",
+            );
+        }
     }
     else {
         %Data = $Self->{TicketObject}->ArticleLastCustomerArticle( TicketID => $Self->{TicketID}, );
