@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1758.2.226 2012/02/28 09:55:07 jp Exp $
+# $Id: CHANGES,v 1.1758.2.227 2012/03/05 09:48:08 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 3.0.12 ????-??-??
+ - 2012-03-05 Fixed bug#7545 - AgentTicketBounce lacks permission checks.
  - 2012-02-28 Improved #7526 - Fixed handling of special characters (, ), &, - within statistics.
  - 2012-02-23 Fixed bug#8227 - LDAP user syncronisation doesn't work.
  - 2012-02-15 Fixed bug#8144 - Typo and improved logging in GenericAgent.pm.
